[package]
name = "iced_audio"
version = "0.12.0"
authors = ["Billy Messenger <https://github.com/BillyDM>"]
license = "MIT"
edition = "2021"
keywords = ["iced", "gui", "audio", "vst", "lv2"]
categories = ["gui", "visualization"]
description = "An extension to the Iced GUI library with useful widgets for audio applications"
homepage = "https://github.com/iced-rs/iced_audio"
documentation = "https://docs.rs/iced_audio"
repository = "https://github.com/iced-rs/iced_audio"
readme = "README.md"
resolver = "2"

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = [
    "examples/simple",
    "examples/inputs_tour",
]

[features]
default = ["wgpu"]
wgpu = ["iced/wgpu"]

[dependencies]
iced = { version = "0.10", features = ["advanced", "canvas"] }
iced_core = "0.10"
iced_graphics = "0.9"
iced_renderer = "0.1"
iced_style = "0.9"
