[package]
name = "inputs_tour"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10", default-features = false, features = ["image"] }
iced_audio = { path = "../../", default-features = false }
iced_style = "0.9"

[features]
default = ["wgpu"]
wgpu = ["iced/wgpu", "iced_audio/wgpu"]
