[package]
name = "simple"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10", default-features = false, features = ["image"] }
iced_audio = { path = "../..", default-features = false }

[features]
default = ["wgpu"]
wgpu = ["iced/wgpu", "iced_audio/wgpu"]
