[package]
name = "simple"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10"
iced_audio = { path = "../..", default-features = false, features = ["image"]  }

[features]
default = ["wgpu"]
wgpu = ["iced_audio/wgpu"]
